--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Dan Donahue's Blog - First Post</title>
+    <title>{{site.name}} - {{page.title}}</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>First Post</h1>
+          <h1>{{page.title}}</h1>
           <h2></h2>
         </header>
 
@@ -32,8 +32,7 @@
           <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-	<p>Hello</p>
-
+	{{content}}
         </section>
 
         <footer>
