Continue work on styling.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,15 +14,9 @@
   </head>
 
   <body>
-
-      <div class="sidebar">
-	      <img src="http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=200" height="200" width="200" alt="Dan Donahue"><br />
-	      THIS IS THE SIDEBAR
-
-       </div>
-    <div id="container">
-      <div class="inner">
-
+    <div class="wrap">
+    <div class="container">
+      <div class="content">
         <header>
           <h1>{{page.title}}</h1
           <h2></h2>
@@ -40,7 +34,19 @@
 
 	<footer>
 	</footer>
+      </div> 
+      <div class="sidebar">
+        <img src="http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=200" height="200" width="200" alt="Dan Donahue"><br />
+        THIS IS THE SIDEBAR
       </div>
+      <div class="clear"></div>
+    </div>
+
+    <div id="container">
+      <div class="inner">
+
+      </div>
+    </div>
     </div>
   </body>
 </html>
