Add _includes folder. Create include for sidebar.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,17 +50,7 @@
     {% endif %}
 
       </div> 
-      <div class="sidebar">
-        <img src="http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=160" height="160" width="160" alt="Dan Donahue"><br />
-        I am Dan Donahue.<br />
-        Programmer, music lover/creator, Flyers fan, vegan, bicyclist.
-        <ul>
-          <li><a href="https://github.com/ddonahue" target="_new"><span>GitHub</span></a></li>
-          <li><a href="https://twitter.com/deathmetaldan13" target="_new"><span>Twitter</span></a></li>
-          <li><a href="http://linkedin.com/in/dandonahue215" target="_new"><span>LinkedIn</span></a></li>
-          <li><a href="http://soundcloud.com/deathmetaldan" target="_new"><span>Soundcloud</span></a></li>
-        </ul>
-      </div>
+      {% include sidebar.html %}
       <div class="clear"></div>
     </div>
 
