--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="content">
           <header>
-            <h1>{{page.title}}</h1
+            <h1>{{page.title}}</h1>
             <h2></h2>
           </header>
 
