Fix google analytics include.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,9 +28,9 @@
           <section id="main_content">
 	    {{content}}
           </section>
+	
+	  <hr class="footer">
 
-	  <footer>
-	  </footer>
 
           {% if page.comments %}
             {% include comments.html %}
