Add copyright via include.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,6 +39,7 @@
         </div> 
         {% include sidebar.html %}
         <div class="clear"></div>
+        {% include copyright.html %}
       </div>
     </div>
   </body>
