--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,5 +7,6 @@
     <li><a href="https://twitter.com/deathmetaldan13" target="_new"><span>Twitter</span></a></li>
     <li><a href="http://linkedin.com/in/dandonahue215" target="_new"><span>LinkedIn</span></a></li>
     <li><a href="http://soundcloud.com/deathmetaldan" target="_new"><span>Soundcloud</span></a></li>
+    <li><a href="/feed.xml" target="_new"><span>RSS</span></a></li>
   </ul>
 </div>
