--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,12 @@
   <img src="http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=160" height="160" width="160" alt="Dan Donahue"><br />
   I am Dan Donahue.<br />
   Programmer, music lover/creator, Flyers fan, vegan, bicyclist.
-  <ul>
-    <li><a href="https://github.com/ddonahue" target="_new"><span>GitHub</span></a></li>
-    <li><a href="https://twitter.com/deathmetaldan13" target="_new"><span>Twitter</span></a></li>
-    <li><a href="http://linkedin.com/in/dandonahue215" target="_new"><span>LinkedIn</span></a></li>
-    <li><a href="http://soundcloud.com/deathmetaldan" target="_new"><span>Soundcloud</span></a></li>
-    <li><a href="/feed.xml" target="_new"><span>RSS</span></a></li>
-  </ul>
+
+  <div class="social-links">
+    <a href="https://github.com/ddonahue" target="_new" class="social"><img src="/images/icons/github.png" alt="GitHub" /></a>
+    <a href="https://twitter.com/deathmetaldan13" target="_new" class="social"><img src="/images/icons/twitter.png" alt="Twitter" /></a>
+    <a href="https://linkedin.com/in/dandonahue215" target="_new" class="social"><img src="/images/icons/linkedin.png" alt="LinkedIn" /></a><br />
+    <a href="http://soundcloud.com/deathmetaldan" target="_new" class="social"><img src="/images/icons/soundcloud.png" alt="Soundcloud" /></a>
+    <a href="/feed.xml" target="_new" class="social"><img src="/images/icons/rss.png" alt="RSS" /></a>
+  </div>
 </div>
