--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,6 +114,10 @@ header h2 {
   clear: both;
 }
 
+.social-links {
+	margin-top: 10px;
+}
+
 
 a.button {
   -moz-border-radius: 30px;
@@ -270,7 +274,6 @@ h3 {
   color: #d5000d;
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 8px;
 } 
  
 h4 {
