Fix copyright information. Add style to copyright.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -330,11 +330,13 @@ hr.footer {
   color: #aaa;
 }
 
-footer a {
-  color: #666;
-}
-footer a:hover {
-  color: #444;
+.footer {
+	margin-left: auto;
+	margin-right: auto;
+	width: 1060px;
+	text-align: right;
+	background-color: #f0f0f0;
+	padding: 3px 10px;
 }
 
 .page-numbers {
