--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,1 +1,1 @@
-<div class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} <a href="http://dandonahue.net">dandonahue.net</a></div>
+<div class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} - <a href="http://dandonahue.net">dandonahue.net</a></div>
