--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,10 @@
         </div> 
         {% include sidebar.html %}
         <div class="clear"></div>
-        {% include copyright.html %}
       </div>
+    </div>
+    <div class="footer">
+        {% include copyright.html %}
     </div>
   </body>
 </html>
