Add navigation to bottom of posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,11 +24,14 @@
 
           <hr>
 
+
           <section id="main_content">
-	    {{content}}
+      	    {{content}}
           </section>
 	
-	  <hr class="footer">
+	        <hr>
+          {% include post-navigation.html %}
+	        <hr class="footer">
 
 
           {% if page.comments %}
