--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,1 +1,4 @@
-<div class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} - <a href="http://dandonahue.net">dandonahue.net</a></div>
+<div class="copyright">
+Copyright &copy; {{ site.time | date: '%Y' }} - <a href="http://dandonahue.net">dandonahue.net</a><br />
+Social icons used with permission from <a href="http://sawb.deviantart.com/art/Social-Icons-Pack-123247215" target="_new">sawb @ deviantart</a>
+</div>
