Add share links.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,8 @@
           <section id="main_content">
       	    {{content}}
           </section>
+
+          {% include share-links.html %}
 	
 	        <hr>
           {% include post-navigation.html %}
