Move pair programming drafts to posts for publishing.

--- a/_includes/pairing-series-nav.html
+++ b/_includes/pairing-series-nav.html
@@ -1,7 +1,16 @@
 <p><em>This post is part of a series on pair programming. Links to the other posts in the series follow:</em></p>
 
 <ul>
+  {% if page.url == "/2013/11/20/my-thoughts-on-pair-programming-intro.html" %}
   <li>Introduction</li>
+  {% else %}
+  <li><a href="/2013/11/20/my-thoughts-on-pair-programming-intro.html">Introduction</a></li>
+  {% endif %}
+
+  {% if page.url == "/2013/11/20/my-thoughts-on-pair-programming-the-good.html" %}
   <li>The Good</li>
-<ul>
+  {% else %}
+  <li><a href="/2013/11/20/my-thoughts-on-pair-programming-the-good.html">The Good</a></li>
+  {% endif %}
+</ul>
 <hr />
