Publish next post in pair programming series.

--- a/_includes/pairing-series-nav.html
+++ b/_includes/pairing-series-nav.html
@@ -12,5 +12,11 @@
   {% else %}
   <li><a href="/2013/11/20/my-thoughts-on-pair-programming-the-good.html">The Good</a></li>
   {% endif %}
+
+  {% if page.url == "/2013/11/25/my-thoughts-on-pair-programming-individuality-and-creativity.html" %}
+  <li>Individuality &amp; Creativity</li>
+  {% else %}
+  <li><a href="/2013/11/25/my-thoughts-on-pair-programming-individuality-and-creativity.html">Individuality &amp; Creativity</a></li>
+  {% endif %}
 </ul>
 <hr />
