--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -305,10 +305,11 @@ p a {
 }
 
 blockquote {
-  font-size: 1.6em;
+  font-size: 1.0em;
   border-left: 10px solid #e9e9e9;
   margin-bottom: 20px;
   padding: 0 0 0 30px;
+  font-weight: bold;
 }
 
 ul li {
