Add new post about pairing.

--- a/_includes/pairing-series-nav.html
+++ b/_includes/pairing-series-nav.html
@@ -18,5 +18,11 @@
   {% else %}
   <li><a href="/2013/11/25/my-thoughts-on-pair-programming-individuality-and-creativity.html">Individuality &amp; Creativity</a></li>
   {% endif %}
+
+  {% if page.url == "/2013/11/26/my-thoughts-on-pair-programming-code-quality.html" %}
+   <li>Code Quality</li>
+  {% else %}
+   <li><a href="/2013/11/26/my-thoughts-on-pair-programming-code-quality.html">Code Quality</a></li>
+  {% endif %}
 </ul>
 <hr />
