--- a/_includes/pairing-series-nav.html
+++ b/_includes/pairing-series-nav.html
@@ -24,5 +24,11 @@
   {% else %}
    <li><a href="/2013/11/26/my-thoughts-on-pair-programming-code-quality.html">Code Quality</a></li>
   {% endif %}
+
+  {% if page.url == "/2013/12/11/my-thoughts-on-pair-programming-odds-and-ends.html" %}
+   <li>Odds &amp; Ends - Wrap Up</li>
+  {% else %}
+   <li><a href="/2013/12/11/my-thoughts-on-pair-programming-odds-and-ends.html">Odds &amp; Ends - Wrap Up</a></li>
+  {% endif %}
 </ul>
 <hr />
