Added new icon for bandcamp.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,7 @@
     <a href="https://twitter.com/deathmetaldan13" target="_new" class="social"><img src="/images/icons/twitter.png" alt="Twitter" /></a>
     <a href="https://linkedin.com/in/dandonahue215" target="_new" class="social"><img src="/images/icons/linkedin.png" alt="LinkedIn" /></a><br />
     <a href="http://soundcloud.com/deathmetaldan" target="_new" class="social"><img src="/images/icons/soundcloud.png" alt="Soundcloud" /></a>
+    <a href="http://wilderhost.bandcamp.com"><img src="https://s0.bcbits.com/img/buttons/bandcamp_60x60_black.png" width="50" height="50"></a>
     <a href="/feed.xml" target="_new" class="social"><img src="/images/icons/rss.png" alt="RSS" /></a>
   </div>
 </div>
