--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <img src="http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=160" height="160" width="160" alt="Dan Donahue"><br />
   I am Dan Donahue.<br />
-  Programmer, music lover/creator, Flyers fan, vegan, bicyclist.
+  Programmer, music lover/creator, Flyers fan, vegetarian, bicyclist.
 
   <div class="social-links">
     <a href="https://github.com/ddonahue" target="_new" class="social"><img src="/images/icons/github.png" alt="GitHub" /></a>
