Adds an underline to the currently active top navigation item.

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -88,6 +88,12 @@ body {
 			@media #{$small} {
 				display: inline;
 				padding: 0;
+				&:hover {
+					border-bottom: 2px solid black;
+				}
+				&.selected {
+					border-bottom: 2px solid black;
+				}
 			}
 		}
 	}
